# ballard-trucks

./: .gitignore  AGENTS.md  README.md  SPEC.md  compose.yml  openapi.yaml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: api.rs  db.rs  domain.rs  main.rs  middleware.rs
backend/src/api/: breweries.rs  schedules.rs  vendors.rs
backend/src/db/: brewery_repo.rs  schedule_repo.rs  vendor_repo.rs
backend/src/domain/: breweries.rs  schedules.rs  vendors.rs
db/: schema.sql  seed.sql
