[package]
name = "ballard-trucks-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.21", features = ["serde", "v4"] }
log = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }